<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="filmy.nelk.io.filmy.DetailsActivity"
    tools:showIn="@layout/activity_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_details_backdrop"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="wrap_content"
            tools:image="@string/backdrop"
            />

        <ImageView
            android:id="@+id/iv_details_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:image="@string/poster"
            />

        <TextView
            android:id="@+id/tv_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/title"
            />

        <TextView
            android:id="@+id/tv_details_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/rating"
            />

        <TextView
            android:id="@+id/tv_details_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/release_date"
            />

        <TextView
            android:id="@+id/tv_details_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/synapse"
            />

    </LinearLayout>

</FrameLayout>
